--- a/application/src/main/asciidoc/projectGroups.adoc
+++ b/application/src/main/asciidoc/projectGroups.adoc
@@ -1,34 +1,8 @@
 
-== GET /api/projectGroups/{projectKey}
+*Project Groups* establishes a group of related projects.  Teams in the project can establish their own language of the problem domain.
+Terms can be shared across the Teams and each Team can establish their own definition(s) for the Terms.
+
+=== GET /api/projectGroups/{projectKey}
 
 
-== POST /api/projectGroups/{projectKey}/terms
-.Path Parameters
-include::{snippets}/create-term/path-parameters.adoc[]
-
-.Request
-[source,bash]
-include::{snippets}/create-term/curl-request.adoc[]
-
-[source,bash]
-include::{snippets}/create-term/http-request.adoc[]
-
-.Success Responses
-[source,bash]
-include::{snippets}/create-term/http-response.adoc[]
-
-
-== POST /api/projectGroups/{projectKey}/terms/{termUuid}/definitions
-.Path Parameters
-include::{snippets}/create-term-definition/path-parameters.adoc[]
-
-.Request
-[source,bash]
-include::{snippets}/create-term-definition/curl-request.adoc[]
-
-[source,bash]
-include::{snippets}/create-term-definition/http-request.adoc[]
-
-.Success Responses
-[source,bash]
-include::{snippets}/create-term-definition/http-response.adoc[]
+=== POST /api/projectGroups/{projectKey}
